--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body onload="loadInitialData()">
     <!-- Add New Item Button on Mobile Screen -->
     <div class="add__new__btn__mobile__only">
       <button
@@ -62,7 +62,7 @@
               <div class="mb-3">
                 <label for="imageUrl" class="form-label">Image URL</label>
                 <input
-                  type="email"
+                  type="url"
                   class="form-control"
                   id="imageUrl"
                   aria-describedby="imageHelp"
@@ -117,7 +117,13 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="handleSubmit()"
+            >
+              Save changes
+            </button>
           </div>
         </div>
       </div>
@@ -211,6 +217,7 @@
                 placeholder="Search your tasks "
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
+                oninput="searchTask.apply(this, arguments)"
               />
               <span class="input-group-text" id="addon-wrapping"
                 ><i class="fa-solid fa-magnifying-glass"></i
